# SignalSculpt

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Module.cpp
src/core/headers/: Module.h
src/helpers/: DrawDragPoint.h
src/modules/: EnvelopeModule.cpp
src/modules/headers/: EnvelopeModule.h
src/widgets/: EnvelopeDisplay.cpp
src/widgets/headers/: EnvelopeDisplay.h
